--- a/.github/workflows/publish_PYPI_each_tag.yml
+++ b/.github/workflows/publish_PYPI_each_tag.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '12.22.12'
+          node-version: 'v12.22.9'
 
       - name: Install Node.js dependencies
         run: |
